@@ -1,21 +1,0 @@
-Changes
-examples/demo.pl
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-INSTALL
-lib/Test/GlassBox/Heavy.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/load.t
-t/pod-coverage.t
-t/pod.t
-t/src.pl
-t/test.pl
