@@ -1,3 +1,8 @@
+{{$NEXT}}
+
+  * Port to Dist::Zilla
+  * Renamed to Test::Subroutines
+
 libtest-glassbox-heavy-perl (1.02-1) UNRELEASED; urgency=low
 
   * Fix for files using __END__ and __DATA__
